--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -5,9 +5,39 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="/css/landing.css">
+  <link rel="stylesheet" href="/css/styles.css">
+  <link
+    href="https://fonts.googleapis.com/css?family=Play:400,700&display=swap&subset=cyrillic,cyrillic-ext,greek,latin-ext,vietnamese"
+    rel="stylesheet">
   <title>Home Page</title>
 </head>
 
-<body>Hello</body>
+<body>
 
+  <header>
+    <a href="#" class="logo">Logo</a>
+    <ul>
+      <li><a href="#">Me</a></li>
+      <li><a href="#">Projects</a></li>
+      <li><a href="#">Notes</a></li>
+      <li><a href="#">Stuff</a></li>
+      <li><a href="#">Todo</a></li>
+      <li><a href="#">Contact</a></li>
+      {{!-- <li><label class="switch"><input type="checkbox" id="togBtn">
+          <div class="slider round">
+            <span class="on">ON</span><span class="off">OFF</span>
+          </div>
+        </label>
+      </li> --}}
+    </ul>
+  </header>
+
+  <script text="text/javascript">
+    window.addEventListener("scroll", function(){
+      var header = document.querySelector("header");
+      header.classList.toggle("sticky", window.scrollY > 0);
+    })
+  </script>
+</body>
 </html>
